--- a/css/style.css
+++ b/css/style.css
@@ -51,3 +51,46 @@ button {
 button:focus{
     outline: 1px solid var(--color-accent);
 }
+/* Header */
+ .header {
+     position: fixed;
+     top: 0;
+     background-color: #050a13;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+     width: 100%;
+     padding: 1rem;
+     
+ }
+ .header__logo{
+     display: flex;
+     align-items: center;
+     gap: 8px
+ }
+ .header__logo__img {
+     width: 36px;
+     height: 36px;
+ }
+ .header__logo__title {
+     /* rem: 기본사이즈보다 1.8배 크게  */
+     font-size: 1.8rem; 
+ }
+ .header__menu{
+     display: flex;
+     gap: 4px
+
+ }
+ .header__menu__item {
+     padding: 8px 16px;
+ }
+ .header__menu__item:hover {
+     border-bottom: 1px solid var(--color-accent) ;
+     
+ }
+
+ .header__menu__item.active {
+     border: 1px solid var(--color-accent);
+     border-radius: 14px;
+ }
+ 
