--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,25 @@ button {
 button:focus{
     outline: 1px solid var(--color-accent);
 }
+
+/* common */
+.section {
+    padding: 4rem;
+    text-align: center;
+}
+.title{
+    font-size: 2.5rem;
+    margin: 1rem 0;
+}
+.description{
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+}
+.max-container {
+    max-width: var(--size-max-width);
+    margin: auto;
+}
+
 /* Header */
  .header {
      position: fixed;
@@ -91,7 +110,7 @@ button:focus{
 
  .header__menu__item.active {
      border: 1px solid var(--color-accent);
-     border-radius: 14px;
+     border-radius: 4px;
  }
  
  /* Home */
@@ -137,4 +156,51 @@ button:focus{
      background-color: transparent;  /*투명*/
      outline: 2px solid var(--color-accent);
      color: var(--color-text);
+ }
+
+ /* About */
+ .majors {
+     display: flex;
+     justify-content: space-between;
+     gap: 1rem;
+     margin: 2.5rem 0;
+ }
+ .major {
+     background-color: var(--color-primary-variant);
+     padding: 2rem 1rem;
+     color: var(--color-text);
+     border-radius: 1rem;
+     cursor: default;
+     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+ }
+ .major__icon {
+     font-size: 4rem;
+     margin: 1rem 0rem;
+     color: var(--color-accent);
+     transition: all 300ms ease;
+ }
+ .major__title {
+     font-size: 1.5rem;
+     font-weight: bold;
+     margin-bottom: 1rem;
+ }
+ .major:hover .major__icon {
+     transform: rotate(-15deg) scale(1.2);
+
+ }
+ .jobs {
+     text-align: start;
+ }
+ .job {
+     display: flex;
+     align-items: center;
+     gap: 8px;
+     margin-bottom: 1rem;
+ }
+ .job__name {
+     color: var(--color-primary);
+ }
+ .job__period {
+     color: var(--color-primary);
+     font-size: 0.8rem;
  }
