--- a/css/style.css
+++ b/css/style.css
@@ -290,3 +290,51 @@ button:focus{
      opacity: 1;
      top:3px;
  }
+.projects {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 2rem
+}
+.project{
+    position: relative;
+    
+
+}
+.project__img{
+    width: 100%;
+    border-radius: 8px;
+    overflow: hidden;
+    
+}
+.project__metadata{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-black);
+    opacity: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 250ms ease-in;
+    transform: translateY(-10px);
+}
+
+.project__metadata:hover {
+    opacity: 0.8;
+    transform: translateY(0px);
+}
+.project__title:after {
+    content: '';
+    display: block;
+    position: relative;
+    left: 50%;
+    margin: 0.5rem;
+    transform: translateX(-60%);
+    width: 80px;
+    height: 2px;
+    background-color: var(--color-accent);
+}
