--- a/css/style.css
+++ b/css/style.css
@@ -338,3 +338,34 @@ button:focus{
     height: 2px;
     background-color: var(--color-accent);
 }
+/* Testimonial */
+.testimonials {
+    margin: 3rem;
+}
+.testimonial {
+    display: flex;
+    gap: 2rem;
+    margin-bottom: 2rem;
+    align-items: center;
+}
+
+.testimonial:nth-child(even) .testimonial__img{
+    order:1;
+}
+.testimonial__img {
+    border-radius: 100%;
+    width: 150px;
+    height: 150px;
+    box-shadow: 0 3px 10px rgb(0,0,0,0.5);
+
+}
+.testimonial__bubble {
+    padding: 1rem;
+    box-shadow: 0 3px 10px rgb(0,0,0,0.5);
+    border-radius: 8px;
+}
+.testimonial__bublle__name {
+    color: var(--color-accent);
+    font-weight: bold;
+    filter: brightness(70%);
+}
