--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,17 @@ button:focus{
  .header {
      position: fixed;
      top: 0;
-     background-color: #050a13;
+     background-color: transparent;
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: 100%;
      padding: 1rem; 
      z-index: 1; 
+     transition: all 300ms ease-in;
+ }
+ .header--dark{
+     background-color: var(--color-primary);
  }
  .header__logo{
      display: flex;
@@ -116,6 +120,10 @@ button:focus{
      padding: 5rem 1rem;
      padding-top: 7rem;
      text-align: center;
+ }
+ .home__contents {
+     opacity: 1;
+     transition: all 300ms ease-in;
  }
  .home__avatar {
      width: 250px;
@@ -401,7 +409,7 @@ button:focus{
 .contact__link:hover {
     color:var(--color-accent);
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width: 768px){
     .section {
         padding: 3rem 2rem;
     }
