--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ button:focus{
  }
  .header--dark{
      background-color: var(--color-primary);
+     box-shadow: black 0px 5px 15px;
  }
  .header__logo{
      display: flex;
@@ -389,7 +390,9 @@ button:focus{
     width: 4.5rem;
     height: 4.5rem;
     text-align: center;
+    opacity: 0;
     box-shadow: 0 3px 10px var(--color-accent);
+    transition: all 300ms ease-in;
 }
 /* Footer */
 #contact {
