--- a/css/style.css
+++ b/css/style.css
@@ -100,12 +100,19 @@ button:focus{
      /* rem: 기본사이즈보다 1.8배 크게  */
      font-size: 1.8rem; 
  }
+ .header__toggle {
+     color: var(--color-white);
+     font-size: 1.8rem;
+     display: none;
+ }
  .header__menu{
      display: flex;
      gap: 4px
  }
  .header__menu__item {
+     display: block;
      padding: 8px 16px;
+     border-bottom: 1px solid transparent;
  }
  .header__menu__item:hover {
      border-bottom: 1px solid var(--color-accent) ;    
@@ -414,7 +421,7 @@ button:focus{
 }
 @media screen and (max-width: 768px){
     .section {
-        padding: 3rem 2rem;
+        padding: 4rem 2rem;
     }
     .title {
         font-size: 2rem;
@@ -422,21 +429,37 @@ button:focus{
     .description {
         font-size: 1rem;
     }
+
     .header {
         flex-direction: column;
         align-items: start;
+        background-color: var(--color-primary);
     }
-    
+    .header__mobilebox{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        
+    }
+    .header__toggle{
+        display: block;
+    }
     .header__nav {
         width: 100%;
         
     }
     .header__menu {
+        display: none;
         flex-direction: column;
         text-align: center;
-        padding: 1rem 4rem;
+        margin: 1rem 4rem;
         gap: 1rem
     }
+    .header__menu.open {
+        display: flex;
+        
+    }
+    
     #home {
         padding-bottom: 3rem;
     }
