--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,12 @@ button:focus{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 2rem
+    gap: 2rem;
+    transition: all 200ms ease-out;
+}
+.projects.anim-out{
+    opacity: 0;
+    transform: scale(0.96) translateY(20px);
 }
 .project{
     position: relative;
@@ -354,6 +359,7 @@ button:focus{
     height: 2px;
     background-color: var(--color-accent);
 }
+
 /* Testimonial */
 .testimonials {
     margin: 3rem;
