--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
     /* Colors */
     --color-white: #ffffff;
     --color-black: #050a13;
-    --color-blue: #03e8f9;
+    --color-blue: #75d5fcf6;
+    /* #03e8f9; */
     --color-orange: #fd6413;
     --color-gray: #1b1e26;
 
